--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,26 @@
 body {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
   padding: 0;
   box-sizing: border-box;
   margin: 0;
+  background: #f4e6ff;
+  display: flex;
+  justify-content: center;
+
+  padding: 2rem;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
-
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
